cargo_check.errors
warning: unexpected `cfg` condition name: `fuzzing`
   --> C:\Users\chadm\Projects\age\age-rs\age\src\lib.rs:449:7
    |
449 | #[cfg(fuzzing)]
    |       ^^^^^^^
    |
    = help: expected names are: `docsrs`, `feature`, and `test` and 31 more
    = help: consider using a Cargo feature instead
    = help: or consider adding in `Cargo.toml` the `check-cfg` lint config for the lint:
             [lints.rust]
             unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
    = help: or consider adding `println!("cargo::rustc-check-cfg=cfg(fuzzing)");` to the top of the `build.rs`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: `#[warn(unexpected_cfgs)]` on by default

warning: `age` (lib) generated 1 warning
    Checking age-xwing v0.1.0 (C:\Users\chadm\Projects\age-xwing)
warning: unused import: `CryptoRng`
 --> src\pq.rs:8:25
  |
8 | use rand::{rngs::OsRng, CryptoRng, TryRngCore};
  |                         ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Error09`, `Rng09`, and `TryRng06`
  --> src\pq.rs:11:24
   |
11 | use rand_core_compat::{Error09, Rng09, TryRng06, TryRng09};
   |                        ^^^^^^^  ^^^^^  ^^^^^^^^

error[E0277]: the trait bound `TryRng09<rand::rngs::OsRng>: rand::CryptoRng` is not satisfied
   --> src\pq.rs:81:53
    |
 81 |         let (ct, mut ss) = self.pub_key.encapsulate(&mut rng).map_err(|_| {
    |                                         ----------- ^^^^^^^^ the trait `DerefMut` is not implemented for `TryRng09<rand::rngs::OsRng>`
    |                                         |
    |                                         required by a bound introduced by this call
    |
note: there are multiple different versions of crate `rand_core` in the dependency graph
   --> C:\Users\chadm\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand_core-0.9.3\src\lib.rs:204:1
    |
204 | pub trait CryptoRng: RngCore {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is the required trait
    |
   ::: src\pq.rs:1:5
    |
  1 | use age::{secrecy, Identity as AgeIdentity, Recipient as AgeRecipient};
    |     --- one version of crate `rand_core` used here, as a dependency of crate `rand`
...
  6 | use libcrux_hkdf::{expand, extract, Algorithm};
    |     ------------ one version of crate `rand_core` used here, as a dependency of crate `rand`
    |
   ::: C:\Users\chadm\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand_core_compat-0.1.0\src\compat\v0_9.rs:13:1
    |
 13 | pub struct TryRng09<T: rand_core_0_9::TryRngCore>(pub T);
    | ------------------------------------------------- this type doesn't implement the required trait
    |
   ::: C:\Users\chadm\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rand_core-0.6.4\src\block.rs:68:1
    |
 68 | pub trait BlockRngCore {
    | ---------------------- this is the found trait
    = help: you can use `cargo tree` to explore your dependency tree
    = note: required for `TryRng09<rand::rngs::OsRng>` to implement `rand::CryptoRng`
note: required by a bound in `pq_xwing_kem::xwing768x25519::EncapsulationKey::encapsulate`
   --> C:\Users\chadm\.cargo\git\checkouts\pq-xwing-kem-e245bf75486c6cc0\44a9ded\src\xwing768x25519.rs:57:40
    |
 57 |     pub fn encapsulate<R: TryRngCore + CryptoRng>(
    |                                        ^^^^^^^^^ required by this bound in `EncapsulationKey::encapsulate`

For more information about this error, try `rustc --explain E0277`.
warning: `age-xwing` (lib) generated 2 warnings
error: could not compile `age-xwing` (lib) due to 1 previous error; 2 warnings emitted
